--- a/ansible/playbooks/setup_jenkins.yml
+++ b/ansible/playbooks/setup_jenkins.yml
@@ -58,7 +58,7 @@
         src: /dev/sdb
         fstype: ext4
         opts: defaults
-        state: absent
+        state: mounted
 
     - name: Set correct ownership for Jenkins home directory after mount
       file:
