--- a/ansible/playbooks/setup_app.yml
+++ b/ansible/playbooks/setup_app.yml
@@ -1,5 +1,5 @@
 - name: 🐳 Setup Application Server (Docker)
-  hosts: app_servers
+  hosts: all
   become: true
 
   tasks:
@@ -46,3 +46,9 @@
         name: "{{ ansible_user }}"
         groups: docker
         append: yes
+
+    - name: Authorize Jenkins deploy SSH key
+      ansible.builtin.authorized_key:
+        user: "{{ ansible_user }}"
+        key: "{{ lookup('file', 'files/jenkins_deploy_key.pub') }}"
+        state: present
