added mysql client to app vm

--- a/ansible/playbooks/setup_app.yml
+++ b/ansible/playbooks/setup_app.yml
@@ -11,6 +11,7 @@
           - curl
           - gnupg
           - git
+          - default-mysql-client
         state: present
         update_cache: yes
 
